--- a/D_T_Hieu/Contents/CSS/background.css
+++ b/D_T_Hieu/Contents/CSS/background.css
@@ -13,10 +13,12 @@
 .navbar-brand{
 	margin-right: 50px;
 	font-size: 30px;
+	font-weight: bold;
 }
 .navbar-user {
 	cursor: pointer;	
 	padding-left: 5px;
+	margin-top: 3px;
 }
 	.navbar-user:hover{
 		background-color: #1967C5;
@@ -29,6 +31,9 @@
 	}
 	.navbar-user img{
 		width: 55px;
-		height: 55px;
-		
+		height: 55px;	
 	}
+
+.container{
+	margin-top: 100px;
+}
