--- a/D_T_Hieu/Contents/CSS/background.css
+++ b/D_T_Hieu/Contents/CSS/background.css
@@ -33,7 +33,26 @@
 		width: 55px;
 		height: 55px;	
 	}
-
+	
 .container{
 	margin-top: 100px;
+	
 }
+	.table-responsive{
+		box-shadow: 0 2px 6px #888;
+	}
+	.table-responsive table thead th{
+		border-right: 1px solid #fff;
+	}
+	.table-responsive table tbody tr{
+		cursor: pointer;
+	}
+	.table-responsive table tbody tr td,th{
+		border-right: 0.5px solid #ccc;
+	}
+	.table-responsive table tbody tr:hover td{
+		color: #1967C5;
+		border-right: 0.5px solid #ccc;
+	}
+	
+
