--- a/D_T_Hieu/Contents/CSS/background.css
+++ b/D_T_Hieu/Contents/CSS/background.css
@@ -22,20 +22,48 @@ body{
 	cursor: pointer;	
 	padding-left: 5px;
 	margin-top: 3px;
+	padding-left: 10px;
+	padding-right: 10px;
+	border: none;
+	background-color: transparent;
+
 }
 	.navbar-user:hover{
-		background-color: #1967C5;
-		padding-left: 5px;
+		background-color: rgba(255,255,255,0.3);
 		border-radius: 5px;
 	}
 	.navbar-user span{
 		font-size: 18px;
 		color: #fff;
 	}
-	.navbar-user img{
-		width: 55px;
-		height: 55px;	
+		.navbar-user .usericon{
+			height: 40px;
+			width: 40px;
+			border-radius: 50%;
+		}
+		.dropdown-toggle::after{
+			content: none;
+		}
+	.dropdown-item{
+		cursor: pointer;
+		margin-top: 5px;
 	}
+	.dropdown-item:hover{
+		background-color: #DEDED5;
+	}
+		.logout-user{
+			font-weight: bold;
+			border-top: 1px solid #ccc;
+		}
+		.logout-user:hover{
+			color: #317EDA;
+		}
+		.dropdown-item img{
+			margin-left: 10px;
+			height: 20px;
+			width: 20px;
+			border-radius: 52%;
+		}
 	
 .container{
 	margin-top: 100px;
@@ -83,6 +111,7 @@ body{
 	min-width: 200px;
 	max-width: 400px;
 	margin-top: 20px;
+	text-align: center;
 }
 .list-monhoc{
 	text-align: center;
@@ -121,3 +150,45 @@ body{
 	    background-position: -23px 0px;
 	    cursor: pointer;
 	}
+
+.row-survey{
+	margin-top: 12px;
+}
+.bd-bottom{
+	border-bottom: 1px solid #ccc;
+}
+.action-survey{
+	display: flex;
+}
+
+/*thêm mới ngày 7/12 */
+table{
+	text-align: center;
+}
+table tr{
+	cursor: pointer;
+}
+table tr td:nth-child(1),table tr td:nth-child(2){
+	text-align: left;
+	padding-left: 10px;
+}
+
+.btn-change-phieu{
+	margin-top: 20px;
+	margin-left: 40%;
+}
+nav .show>.btn-info.dropdown-toggle {
+    color: #fff;
+    background-color: rgba(255,255,255,0.3);
+    border-color: none;
+}
+nav .show>.btn-info.dropdown-toggle:focus {
+    box-shadow: none;
+}
+
+.dropdown-menu{
+	box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
+	padding-left: 10px;
+	padding-right: 10px;
+}
+/*end*/
