--- a/D_T_Hieu/Contents/CSS/createSub.css
+++ b/D_T_Hieu/Contents/CSS/createSub.css
@@ -1,5 +1,6 @@
 .container-create{
-	margin-bottom: 20px;
+	margin-bottom: 30px;
+	padding-bottom: 20px;
 	border-bottom: 1px solid #ccc;
 }
 .icon-add {
