--- a/D_T_Hieu/Contents/CSS/introduce.css
+++ b/D_T_Hieu/Contents/CSS/introduce.css
@@ -13,21 +13,25 @@
 	height: 400px;
 	min-width: 320px;
 	border-radius: 5px;
+	background-image: url('../Images/login_bg.png');
+	background-repeat: no-repeat;
+	background-size: cover;
 }
 
 	.session-login .title-session{
 		color: #317EDA;
-		border-bottom: 1px solid #ccc;
+		border-bottom: 2px solid #F5950D;
 		cursor: default;
 		font-weight: bold;
 		font-size: 26px;
 		height: 50px;
 		text-align: center;
 		padding-top: 5px;
-		background-color: #fff;
+		/*background-color: #fff;*/
 	}
 		.session-login .title-session img{
 			margin-left: 10px;
+			margin-top: -8px;
 			height: 26px;
 			width: 26px;
 		}
@@ -122,3 +126,4 @@ h1 {
 	.text-intro p{
 
 	}
+
