--- a/D_T_Hieu/Contents/CSS/st_tc.css
+++ b/D_T_Hieu/Contents/CSS/st_tc.css
@@ -38,6 +38,7 @@
 /*end thẻ*/
 
 
+
 /*Sinh viên đánh giá*/
 #name-class{
 	background-color: #54C8FE;
@@ -56,19 +57,42 @@
 .list-criteria .branch-criteria{
 	margin-bottom: 10px;
 }
-.list-criteria .branch-criteria .title-branch {
-	
-}
-.list-criteria .branch-criteria .node-branch{
-
-}
 .list-criteria .branch-criteria .node-branch .item-criteria{
 	list-style: none;
-	padding: 6px 0 2px;
+	padding: 6px 0 2px 10px;
 	border-bottom: 0.5px solid #77E7ea;
 	display: flex;
+	justify-content: space-between;
 }
 	.list-criteria .branch-criteria .node-branch .item-criteria:hover{
 		background-color: #F2EFEF;
 	}
+	.list-criteria .branch-criteria .node-branch .item-criteria .gr-radio{
+		width: 32.6%;
+		margin-top: -6px;
+		margin-bottom: -10px;
+	}
+	.list-criteria .branch-criteria .node-branch .item-criteria .gr-radio .radio-item{
+		width: 17%;
+		padding-top: 6px;
+		height: 32px;
+		cursor: pointer;
+	}
+	.list-criteria .branch-criteria .node-branch .item-criteria .gr-radio input{
+		width: 16px;
+		height: 16px;
+		margin-left: 50%;
+		margin-right: 50%;
+		transform: translate(-50%,0);
+
+	}
+	.list-criteria .branch-criteria .node-branch .item-criteria .gr-radio .radio-item:hover{
+		background-color: #77E7ea;
+	}
+
+
+#send-result-st{
+	margin-left: 50%;
+	transform: translate(-50%,0%);
+}
 /*end sv đánh giá*/
