--- a/D_T_Hieu/Contents/CSS/st_tc.css
+++ b/D_T_Hieu/Contents/CSS/st_tc.css
@@ -1,4 +1,4 @@
-/*Thẻ đánh giá*/
+Thẻ đánh giá*/
 
 .card{
 	box-shadow: 0 2px 6px #888;
@@ -57,6 +57,22 @@
 .list-criteria .branch-criteria{
 	margin-bottom: 10px;
 }
+
+/*update điểm*/
+.list-criteria .branch-criteria .node-branch .gr-point{
+	width: 32.6%;
+	list-style: none;
+	margin-left: 67.4%;
+}
+.list-criteria .branch-criteria .node-branch .gr-point .point-cri{
+	cursor: default;
+	font-weight: bold;
+	width: 17%;
+	text-align: center;
+	border-bottom: 1px solid #fff;
+}
+/*end update điểm*/
+
 .list-criteria .branch-criteria .node-branch .item-criteria{
 	list-style: none;
 	padding: 6px 0 2px 10px;
@@ -89,10 +105,31 @@
 	.list-criteria .branch-criteria .node-branch .item-criteria .gr-radio .radio-item:hover{
 		background-color: #77E7ea;
 	}
-
+	/*update 13/12 */
+	.list-criteria .branch-criteria .node-branch .cri-feedback{
+		width: 70%;
+		margin-left: 15%;
+		margin-right: 15%;
+		height: 150px;
+		resize: none;
+	}
+	.list-criteria .branch-criteria .node-branch textarea[placeholder]{
+		padding: 5px;
+	}
+	.list-criteria .branch-criteria .node-branch .cri-feedback{
+		font-style: normal;
+	}
+	
+	/*end*/
+	/*update progress*/
+	.progress-cri{
+		margin: 40px 0px 20px 40px;
+	}
+	/*end*/
 
 #send-result-st{
 	margin-left: 50%;
 	transform: translate(-50%,0%);
 }
-/*end sv đánh giá*/
+
+/*end sv đánh giá
