--- a/D_T_Hieu/Contents/CSS/introduce.css
+++ b/D_T_Hieu/Contents/CSS/introduce.css
@@ -2,7 +2,7 @@
 	margin-top: 50px;
 }
 
-.slideshow{
+.slideshow_intro{
 	box-shadow: 0px 3px 30px #8B7;
 	margin-top: 10px;
 	margin-bottom: 30px;
@@ -53,7 +53,7 @@
 .loginbox {
     min-width: 320px;
     height: 400px;
-    background: rgba(0,0,0,0.8);
+    background: rgba(0,0,0,0.7);
     color: #ffffff;
     box-sizing: border-box;
     padding: 40px 30px;
@@ -126,4 +126,49 @@ h1 {
 	.text-intro p{
 
 	}
+
+	
+@media (max-width: 568px) {
+	.text-intro{
+		margin-left: 5px;
+		margin-right: 5px;
+	}
+}
+@media (min-width: 576px){
+	.col-md-4{
+		transform: translate(-30%,0);
+
+	}
+	.col-md-7{
+		transform: translate(20%,0);
+	}
+	.col-md-7,.col-md-4{
+		margin-left: auto;
+		margin-right: auto;
+	}
+}
+@media (min-width: 768px){
+	.col-md-4{
+		transform: translate(-30%,0);
+	}
+	.col-md-7{
+		transform: translate(10%,0);
+	}
+	.col-md-7,.col-md-4{
+		margin-left: auto;
+		margin-right: auto;
+	}
+}
+@media (min-width: 960px){
+	.col-md-4{
+		transform: translate(0,0);
+	}
+	.col-md-7{
+		transform: translate(0,0);
+	}
+	.col-md-7,.col-md-4{
+		margin-left: auto;
+		margin-right: auto;
+	}
+}
 
